# Primes

./: Cargo.toml  README.md  bench.sh
.github/workflows/: rust.yml
bench/: Cargo.toml
bench/src/: main.rs
primes/: Cargo.toml
primes-cli/: Cargo.toml
primes-cli/src/: main.rs
primes-gui/: Cargo.toml
primes-gui/src/: main.rs
primes/src/: primes.rs
