[workspace]
members = ["primes-cli","bench","primes-gui"]

[workspace.package]
authors = ["Mathmagician8191 <50558333+Mathmagician8191@users.noreply.github.com>"]
edition = "2021"

[workspace.dependencies]
primes = {path = "primes"}
integer-sqrt = "*"
num = "*"
itertools = "*"
poll-promise = "*"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
panic = "abort"
strip = true
lto = true