[package]
name = "primes-gui"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
primes = {workspace = true}
integer-sqrt = {workspace = true}
itertools = {workspace = true}
poll-promise = {workspace = true}
eframe = "*"