[package]
name = "primes"
authors.workspace = true
edition.workspace = true
version.workspace = true
description = "A library to check if numbers are prime and find their prime factors"
repository.workspace = true
license.workspace = true

[dependencies]
num-traits = {workspace = true}
integer-sqrt = {workspace = true}

[lib]
name = "primes"
path = "src/primes.rs"
